# cross

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE
cmake/modules/: global.cmake
compile/: build.sh
tests/test_env/: dllmain.cc  main.cc
